[package]
name = "d-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
serenity = { version = "0.12.2", features = ["client", "gateway", "rustls_backend", "model", "collector"]}
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
