[package]
name = "d-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
poise = "0.6.1"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serenity = { version = "0.12.2", features = ["client", "gateway", "rustls_backend", "model", "collector"]}
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
